# sysdocs-fastapi

./: .flake8  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  pyproject.toml  supervisord.conf
app/src/: config.py  main.py
app/src/models/: __init__.py  audit.py  record.py  zone.py
app/src/providers/database/: __init__.py  database.py
app/src/services/audit/: audit_service.py
app/src/services/bind/: __init__.py  bind_service.py
app/test/: test_main.py
database/: .gitignore  Dockerfile  startup.sh
database/sql/: create_tables.sql  create_users.example.sql  seed.sql
docs/: getting-started.md  index.md  local-setup.md
docs/designs/: index.md
src/: config.py  main.py
